@@ -332,6 +332,10 @@ static void MsgWindowUpdateState(HWND hwndDlg, struct MessageWindowData *dat, UI
             PostMessage(hwndDlg, DM_SPLITTERMOVEDGLOBAL, dat->wParam, dat->lParam);
             dat->wParam = dat->lParam = 0;
         }
+        if(dat->dwFlagsEx & MWF_EX_AVATARCHANGED) {
+            dat->dwFlagsEx &= ~MWF_EX_AVATARCHANGED;
+            PostMessage(hwndDlg, DM_UPDATEPICLAYOUT, 0, 0);
+        }
     }
 }
 
@@ -1616,8 +1620,6 @@ BOOL CALLBACK DlgProcMessage(HWND hwndDlg, UINT msg, WPARAM wParam, LPARAM lPara
                 dat->sendMode |= DBGetContactSettingByte(dat->hContact, SRMSGMOD_T, "forceansi", 0) ? SMODE_FORCEANSI : 0;
                 dat->sendMode |= dat->hContact == 0 ? SMODE_MULTIPLE : 0;
                 dat->sendMode |= DBGetContactSettingByte(dat->hContact, SRMSGMOD_T, "no_ack", 0) ? SMODE_NOACK : 0;
-                if(ServiceExists(MS_AV_GETAVATARBITMAP))
-                    dat->ace = (struct avatarCacheEntry *)CallService(MS_AV_GETAVATARBITMAP, (WPARAM)dat->hContact, 0);
 
                 dat->hwnd = hwndDlg;
 
@@ -1861,7 +1863,8 @@ BOOL CALLBACK DlgProcMessage(HWND hwndDlg, UINT msg, WPARAM wParam, LPARAM lPara
                     GetCachedStatusMsg(hwndDlg, dat);
                 }
                 dat->stats.started = time(NULL);
-                SendMessage(hwndDlg, DM_OPTIONSAPPLIED, 0, 0);
+                LoadContactAvatar(hwndDlg, dat);
+				SendMessage(hwndDlg, DM_OPTIONSAPPLIED, 0, 0);
                 LoadOwnAvatar(hwndDlg, dat);
                 /*
                  * restore saved msg if any...
@@ -2607,6 +2610,10 @@ BOOL CALLBACK DlgProcMessage(HWND hwndDlg, UINT msg, WPARAM wParam, LPARAM lPara
                     RedrawWindow(hwndDlg, NULL, NULL, RDW_UPDATENOW | RDW_NOCHILDREN | RDW_INVALIDATE);
                 break;
             }
+        case DM_UPDATEPICLAYOUT:
+            LoadContactAvatar(hwndDlg, dat);
+            SendMessage(hwndDlg, WM_SIZE, 0, 0);
+            return 0;
 		case DM_SPLITTERMOVEDGLOBAL:
 			if(!(dat->dwFlagsEx & MWF_SHOW_SPLITTEROVERRIDE)) {
 				short newMessagePos;
